View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0023523 | Open CASCADE | OCCT:DRAW | public | 2012-11-08 12:11 | 2013-10-02 15:51 |
Reporter | gka | Assigned To | gka | ||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Platform | A | OS | L | ||
Product Version | 6.5.3 | ||||
Target Version | 6.6.0 | Fixed in Version | 6.6.0 | ||
Summary | 0023523: In session DRAW it is impossible to close document having name already once closed document. | ||||
Description | In the session DRAW document having name already closed document can not be closed. | ||||
Steps To Reproduce | Draw[4]> ReadStep D1 trj3_d1-tc-214_mod.stp Document saved with name D1 Draw[5]> Close D1 Draw[6]> ReadStep D1 trj3_d1-tc-214_mod.stp Document saved with name D1 Draw[7]> Close D1 An exception was caught 008C4010 : Standard_Failure: cannot close a document that has not been opened ** Exception ** 008C4010 : Standard_Failure: cannot close a document that has not been opened Draw[8]> | ||||
Tags | No tags attached. | ||||
Test case number | bugs demo (001) bug23523 | ||||
|
Could you please review branch CR23523. |
|
No remarks, please test |
|
Dear BugMaster, Branch CR23523 (and master from occt GIT master) was compiled on Linux and Windows platforms and tested. Regressions: xml 001 B2 xml 002 B2 xml 003 L1 caf named_shape (002) E1-E9, F1-F7 Improvements: Not detected Testing cases: bugs demo(001) bug23523 - OK. See results in /QADisk/occttests/results/KAS/dev/CR23523-master-products_09112012 See reference results in /QADisk/occttests/results/KAS/dev/CR-2012-10-12-IR-2012-10-12-products See test cases in /QADisk/occttests/tests/ED N.B. In order to launch testing case you can make use the following instructions http://doc/doku.php?id=occt:certification |
|
Branch CR23523 is ready to be reviewed. |
|
Reviewed; minor correction (revert changes made for debug, messages correction) is pushed to CR23523. Please test |
|
Dear BugMaster, Branch CR23523 (and products from GIT master) was compiled on Linux and Windows platforms. There are compilation errors on Linux: ../../../src/ViewerTest/ViewerTest.cxx:348: error: prototype for 'const Handle_V3d_View& ViewerTest::CurrentView()' does not match any in class 'ViewerTest' ../../../inc/ViewerTest.hxx:144: error: candidates are: static void ViewerTest::CurrentView(const Handle_V3d_View&) ../../../inc/ViewerTest.hxx:142: error: static Handle_V3d_View ViewerTest::CurrentView() ../../../src/ViewerTest/ViewerTest.cxx:367: error: prototype for 'const Handle_AIS_InteractiveContext& ViewerTest::GetAISContext()' does not match any in class 'ViewerTest' ../../../inc/ViewerTest.hxx:134: error: candidate is: static Handle_AIS_InteractiveContext ViewerTest::GetAISContext() |
|
Tests : xml 001 B2 xml 002 B2 xml 003 L1 are invalid and should be corrected. This test use label from already closed document. |
|
Added ViewerTest.cdl to avoid compilation errors |
|
Branch CR23523 is ready to be tested |
|
Modified tests caf named_shape (002) E1-E9, F1-F7 were added in branch CR23523. |
2012-12-11 17:11 tester |
tests-23523.tar.gz (7,332 bytes) |
|
Dear BugMaster, Branch CR23523 (and products from GIT master) was compiled on Linux and Windows platforms and tested. Regressions: Not detected Improvements: Not detected Testing cases: bugs demo(001) bug23523 - OK. |
occt: master 24de79c3 2012-12-14 12:17:11 Details Diff |
0023523: In session DRAW it is impossible to close document having name already once closed document. Added destructor for TDocStd_Document which performs destruction of document in logical order in order to avoid exception when Undo and Redo fields are destructed after THF_Data field. Added removing name of closed document from tcl variables in the DRAW in order to avoid exception during use the same name for new document. Modification to avoid compilation error class ViewerTest Minor correction in test caf basic G3 |
Affected Issues 0023523 |
|
mod - src/CDM/CDM_Document.cdl | Diff File | ||
mod - src/DDocStd/DDocStd_ApplicationCommands.cxx | Diff File | ||
mod - src/TDocStd/TDocStd_Document.cdl | Diff File | ||
mod - src/TDocStd/TDocStd_Document.cxx | Diff File | ||
mod - src/ViewerTest/ViewerTest.cdl | Diff File | ||
mod - src/ViewerTest/ViewerTest.cxx | Diff File | ||
mod - tests/bugs/caf/bug23489 | Diff File | ||
mod - tests/caf/basic/G3 | Diff File | ||
mod - tests/caf/bugs/B6 | Diff File | ||
mod - tests/caf/named_shape/E1 | Diff File | ||
mod - tests/caf/named_shape/E2 | Diff File | ||
mod - tests/caf/named_shape/E3 | Diff File | ||
mod - tests/caf/named_shape/E4 | Diff File | ||
mod - tests/caf/named_shape/E5 | Diff File | ||
mod - tests/caf/named_shape/E6 | Diff File | ||
mod - tests/caf/named_shape/E7 | Diff File | ||
mod - tests/caf/named_shape/E8 | Diff File | ||
mod - tests/caf/named_shape/E9 | Diff File | ||
mod - tests/caf/named_shape/F1 | Diff File | ||
mod - tests/caf/named_shape/F2 | Diff File | ||
mod - tests/caf/named_shape/F3 | Diff File | ||
mod - tests/caf/named_shape/F4 | Diff File | ||
mod - tests/caf/named_shape/F5 | Diff File | ||
mod - tests/caf/named_shape/F6 | Diff File | ||
mod - tests/caf/named_shape/F7 | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2012-11-08 12:11 | gka | New Issue | |
2012-11-08 12:11 | gka | Assigned To | => gka |
2012-11-08 15:24 | gka | Note Added: 0022150 | |
2012-11-08 15:24 | gka | Assigned To | gka => abv |
2012-11-08 15:24 | gka | Status | new => resolved |
2012-11-09 11:16 | abv | Note Added: 0022168 | |
2012-11-09 11:16 | abv | Assigned To | abv => bugmaster |
2012-11-09 11:16 | abv | Status | resolved => reviewed |
2012-11-09 17:18 |
|
Assigned To | bugmaster => mkv |
2012-11-12 17:12 |
|
Note Added: 0022214 | |
2012-11-12 17:13 |
|
Test case number | => bugs demo (001) bug23523 |
2012-11-12 17:13 |
|
Assigned To | mkv => gka |
2012-11-12 17:13 |
|
Status | reviewed => assigned |
2012-11-14 18:24 | abv | Relationship added | related to 0023554 |
2012-12-05 10:53 | gka | Note Added: 0022559 | |
2012-12-05 10:53 | gka | Assigned To | gka => abv |
2012-12-05 10:53 | gka | Status | assigned => resolved |
2012-12-05 21:01 | abv | Note Added: 0022576 | |
2012-12-05 21:01 | abv | Assigned To | abv => bugmaster |
2012-12-05 21:01 | abv | Status | resolved => reviewed |
2012-12-06 20:20 |
|
Assigned To | bugmaster => mkv |
2012-12-07 10:36 |
|
Note Added: 0022607 | |
2012-12-07 10:37 | gka | Note Added: 0022608 | |
2012-12-07 10:37 |
|
Assigned To | mkv => gka |
2012-12-07 10:37 |
|
Status | reviewed => assigned |
2012-12-07 10:38 |
|
Note Edited: 0022607 | |
2012-12-07 11:20 | gka | Note Added: 0022611 | |
2012-12-07 11:20 | gka | Status | assigned => resolved |
2012-12-07 11:21 | gka | Note Added: 0022612 | |
2012-12-07 11:21 | gka | Status | resolved => reviewed |
2012-12-07 11:23 | gka | Note Added: 0022613 | |
2012-12-07 18:08 |
|
Assigned To | gka => mkv |
2012-12-11 17:11 |
|
File Added: tests-23523.tar.gz | |
2012-12-11 17:12 |
|
Note Added: 0022651 | |
2012-12-11 17:12 |
|
Assigned To | mkv => bugmaster |
2012-12-11 17:12 |
|
Status | reviewed => tested |
2012-12-18 10:45 | gka | Changeset attached | => occt master 24de79c3 |
2012-12-18 10:45 | gka | Assigned To | bugmaster => gka |
2012-12-18 10:45 | gka | Status | tested => verified |
2012-12-18 10:45 | gka | Resolution | open => fixed |
2013-04-23 13:36 |
|
Status | verified => closed |
2013-04-29 15:21 |
|
Fixed in Version | => 6.6.0 |
2013-06-02 12:18 | Roman Lygin | Relationship added | related to 0024007 |
2013-10-02 15:51 | abv | Relationship added | related to 0024164 |